--- a/src/styles/sass-starter/main.scss
+++ b/src/styles/sass-starter/main.scss
@@ -13,7 +13,7 @@
   // 'controls/text-input',
   // 'controls/radio-button',
   // 'controls/select-menu',
-  // 'informational/alert',
+  'informational/alert',
   // 'informational/hint',
   // 'informational/label',
   // 'informational/modal',
