adds overlay and show overlay reducer. Overlay styles

--- a/src/styles/sass-starter/main.scss
+++ b/src/styles/sass-starter/main.scss
@@ -14,7 +14,7 @@
   // 'controls/radio-button',
   // 'controls/select-menu',
   'informational/alert',
-  // 'informational/hint',
+  'informational/hint',
   // 'informational/label',
   // 'informational/modal',
   // 'layout/content',
