--- a/src/components/user-list/user-list.scss
+++ b/src/components/user-list/user-list.scss
@@ -4,8 +4,12 @@
   min-width: 95%;
   border: rem(1) solid $gray-200;
 
-  & > * {
-    padding: rem(8);
+  & > * > * {
+    padding: rem(12);
+  }
+
+  & > * > :last-child {
+    border-left: rem(1) solid $gray-200;
   }
 
   & > :nth-child(even) {
